# fastapi-react-oauth2

backend/: pyproject.toml
backend/app/: configs.py
frontend/src/components/: Buttons.jsx  colors.js
frontend/src/pages/: Auth.jsx
