[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Brett Fitzpatrick <brett.fitzpatrick@ironnetcybersecurity.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beanie = "^1.19.2"
motor = "^3.2.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
httpx-oauth = "^0.12.0"
fastapi-users = {extras = ["beanie"], version = "^11.0.0"}
fastapi = "^0.98.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
